k8s/application/backend/route.yaml
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: pims
      env: dev
      name: pims-api
      role: api
    name: pims-api
    namespace: 5b7aa5-dev
  spec:
    host: pims-app-5b7aa5-dev.apps.silver.devops.gov.bc.ca
    path: /api
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: pims-api
      weight: 100
---
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: pims
      env: dev
      name: pims-api-swagger
      role: api
    name: pims-api-swagger
    namespace: 5b7aa5-dev
  spec:
    host: pims-app-5b7aa5-dev.apps.silver.devops.gov.bc.ca
    path: /api-docs
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: pims-api
      weight: 100
